fixed error not showing up and white gap (finally)

--- a/bin/gui/style.css
+++ b/bin/gui/style.css
@@ -30,6 +30,7 @@ Label.error {
 	-fx-padding: 0 0 0 0;
 	-fx-text-fill: #ff8484;
 	-fx-font-family: "Open Sans";
+	-fx-font-size: 12px;
 }
 
 Label.grey {
